2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 7, resolves #69939
	* Added reference to description field, resolves #70133
	* Moved documentation to reST, resolves #69940

2014-05-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.2, resolves #58678
	* Released to TER as version 1.4.0, resolves #58679

2013-06-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.3.0

2013-05-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added a substitute page title view helper, resolves #46234
	* Cleaned up the sample template, resolves #48488
	* Verified compatibility with TYPO3 6.0 and 6.1, resolves #47519

2013-05-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added FAL support, resolves #48471

2012-06-29 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added definition of search fields, resolves #38483

2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, resolves #38391

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Replaced reference to parent object with new, general member variable, resolves #33053

2010-09-27 Fabien Udriot (Ecodev)  <fabien.udriot@ecodev.ch>

	* first release