@@ -1,3 +1,7 @@
+2016-04-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added composer manifest, resolves #75891
+
 2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 CMS 7, resolves #69939
